# agentforge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  plugin.json
.claude/: CLAUDE.md
.claude/agents/: CLAUDE.md  architect.md  code-reviewer.md  commit-reviewer.md  (+4 more)
assets/: README.md
docs/: CLAUDE.md
examples/: CLAUDE.md  README.md
examples/data-pipeline/: CLAUDE.md  Makefile  README.md  pyproject.toml
examples/data-pipeline/configs/: CLAUDE.md  eval.yaml  train.yaml
examples/data-pipeline/configs/callbacks/: checkpoint.yaml  default.yaml  early_stopping.yaml
examples/data-pipeline/configs/experiment/: ablation_lr.yaml  baseline.yaml
examples/data-pipeline/configs/logger/: tensorboard.yaml  wandb.yaml
examples/data-pipeline/configs/model/: mlp.yaml
examples/data-pipeline/configs/trainer/: default.yaml  gpu.yaml
examples/data-pipeline/src/: eval.py  train.py
examples/data-pipeline/src/models/: module.py
examples/data-pipeline/src/models/components/: mlp.py
examples/data-pipeline/src/optimizers/: schedulers.py
examples/data-pipeline/src/utils/: instantiators.py  metrics.py  types.py
examples/data-pipeline/tests/: conftest.py
examples/data-pipeline/tests/integration/: test_pipeline.py
examples/data-pipeline/tests/unit/: test_cleaners.py  test_datamodule.py  test_instantiators.py  test_metrics.py  test_module.py  test_schedulers.py  test_transformers.py  test_types.py
examples/legacy-refactor/after/: CLAUDE.md  pyproject.toml
examples/legacy-refactor/after/src/pipeline/: loader.py  trainer.py  transformer.py
examples/legacy-refactor/after/src/utils/: config.py  types.py
examples/legacy-refactor/after/tests/: conftest.py  test_loader.py  test_trainer.py  test_transformer.py
prompt-templates/: CLAUDE.md  README.md  chain-of-thought.md  evaluator-optimizer.md  orchestrator-worker.md  parallel-agents.md  plan-and-execute.md  react-pattern.md  reflection.md
(+27 files in other folders)
